--- a/deploy.cfg
+++ b/deploy.cfg
@@ -28,8 +28,8 @@ port = 7125
 # processed simultaneously.
 server-threads = 20
 
-#Minimum memory size in MB. This must be 500Mb * server-threads.
-min-memory = 10000
+#Minimum memory size in MB.
+min-memory = 1000
 
 #Maximum memory size in MB.
-max-memory = 15000
+max-memory = 1500
