updated deploy cfg variables

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -18,7 +18,12 @@
 [NarrativeMethodStore]
 
 # location of the public github repo hosting the method documentation and specifications
-github-resource-url = https://raw.githubusercontent.com/msneddon/narrative_method_specs/master
+github-resource-url = https://raw.githubusercontent.com
+github-api-url = https://api.github.com
+github-owner = msneddon
+github-repo  = narrative_method_specs
+github-branch = master
+
 
 # port for the service. Note this is overridden by SERVICE_PORT in the
 # makefile.
