--- a/deploy.cfg
+++ b/deploy.cfg
@@ -17,13 +17,19 @@
 
 [NarrativeMethodStore]
 
-# location of the public github repo hosting the method documentation and specifications
-github-resource-url = https://raw.githubusercontent.com
-github-api-url = https://api.github.com
-github-owner = msneddon
-github-repo  = narrative_method_specs
-github-branch = master
+# location & branch of the public git repo hosting the method specifications
+method-spec-git-repo = 
+method-spec-git-repo-branch =
 
+# local file location where the method specification repo should be created
+# WARNING! this directory will be deleted and recloned on service startup, so be
+# careful where you point this!
+method-spec-git-repo-local-dir = /kb/deployment/services/narrative_method_store/narrative_method_specs
+
+# every N minutes, the service will check if any updates have been made in the
+# git repo, and if so, the updates will be pulled and the service cache rebuilt
+#  Note: github limits api requests to 60/hour/IP
+method-spec-git-repo-refresh-rate = 2
 
 # port for the service. Note this is overridden by SERVICE_PORT in the
 # makefile.
