--- a/deploy.cfg
+++ b/deploy.cfg
@@ -18,8 +18,8 @@
 [NarrativeMethodStore]
 
 # location & branch of the public git repo hosting the method specifications
-method-spec-git-repo = 
-method-spec-git-repo-branch =
+method-spec-git-repo = https://github.com/msneddon/narrative_method_specs
+method-spec-git-repo-branch = dev
 
 # local file location where the method specification repo should be created
 # WARNING! this directory will be deleted and recloned on service startup, so be
@@ -39,8 +39,8 @@ port = 7125
 # processed simultaneously.
 server-threads = 20
 
-#Minimum memory size in MB.
+# Minimum memory size in MB.
 min-memory = 1000
 
-#Maximum memory size in MB.
+# Maximum memory size in MB.
 max-memory = 1500
