--- a/build.xml
+++ b/build.xml
@@ -73,6 +73,7 @@
     <include name="apache_commons/commons-configuration-1.10.jar"/>
     <include name="apache_commons/commons-io-2.4.jar"/>
     <include name="snakeyaml/snakeyaml-1.11.jar"/>
+    <include name="google/guava-14.0.1.jar"/>
   </fileset>
 	
   <union id="serverside">
