added new cache deployment variable

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -31,6 +31,9 @@ method-spec-git-repo-local-dir = /kb/deployment/services/narrative_method_store/
 #  Note: github limits api requests to 60/hour/IP
 method-spec-git-repo-refresh-rate = 2
 
+# The number of methods cached in memory on the server
+method-spec-cache-size = 5000
+
 # port for the service. Note this is overridden by SERVICE_PORT in the
 # makefile.
 port = 7125
