--- a/test/test.cfg
+++ b/test/test.cfg
@@ -2,8 +2,9 @@
 
 [NarrativeMethodStoreTest]
 
+test.temp-dir = test/temp
+
 test.method-spec-git-repo = https://github.com/msneddon/narrative_method_specs
 test.method-spec-git-repo-branch = test
-test.method-spec-git-repo-local-dir = test/temp/narrative_method_specs
 test.method-spec-git-repo-refresh-rate = 2
 test.method-spec-cache-size = 5000
