allowed automatic removal of temp dir after tests

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -3,6 +3,7 @@
 [NarrativeMethodStoreTest]
 
 test.temp-dir = test/temp
+test.remove-temp-dir = 1
 
 test.method-spec-git-repo = https://github.com/msneddon/narrative_method_specs
 test.method-spec-git-repo-branch = test
