--- a/build.xml
+++ b/build.xml
@@ -199,6 +199,7 @@
 
   <target name="test" depends="compile" description="run tests">
     <fail unless="test.temp-dir" message="test.temp-dir not set"/>
+    <fail unless="test.remove-temp-dir" message="test.remove-temp-dir not set"/>
     <fail unless="test.method-spec-git-repo" message="test.method-spec-git-repo not set"/>
     <fail unless="test.method-spec-git-repo-branch" message="test.method-spec-git-branch not set"/>
     <fail unless="test.method-spec-git-repo-refresh-rate" message="test.method-spec-git-repo-refresh-rate not set"/>
@@ -208,6 +209,7 @@
       <classpath refid="test.classpath"/>
       <formatter type="plain" usefile="false" />
       <sysproperty key="test.temp-dir" value="${test.temp-dir}"/>
+      <sysproperty key="test.remove-temp-dir" value="${test.remove-temp-dir}"/>
       <sysproperty key="test.method-spec-git-repo" value="${test.method-spec-git-repo}"/>
       <sysproperty key="test.method-spec-git-repo-branch" value="${test.method-spec-git-repo-branch}"/>
       <sysproperty key="test.method-spec-git-repo-refresh-rate" value="${test.method-spec-git-repo-refresh-rate}"/>
