--- a/deploy.cfg
+++ b/deploy.cfg
@@ -21,10 +21,12 @@
 method-spec-git-repo = https://github.com/msneddon/narrative_method_specs
 method-spec-git-repo-branch = dev
 
-# local file location where the method specification repo should be created
+# local file location (relative to the glassfish domain where the service starts, ie
+# deployment/services/narrative_method_store/glasfish_domain/NarrativeMethodStore/config/.)
+# where the method specification repo should be created.
 # WARNING! this directory will be deleted and recloned on service startup, so be
 # careful where you point this!
-method-spec-git-repo-local-dir = /kb/deployment/services/narrative_method_store/narrative_method_specs
+method-spec-git-repo-local-dir = narrative_method_specs
 
 # every N minutes, the service will check if any updates have been made in the
 # git repo, and if so, the updates will be pulled and the service cache rebuilt
@@ -34,8 +36,7 @@ method-spec-git-repo-refresh-rate = 2
 # The number of methods cached in memory on the server
 method-spec-cache-size = 5000
 
-# port for the service. Note this is overridden by SERVICE_PORT in the
-# makefile.
+# port for the service.
 port = 7125
 
 # server thread count - this determines the number of requests that can be
