--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
   <!-- Properties in ant are immutable, so the following assignment will only take place if jardir was not set above. -->
   <property name="jardir" location="${env.JENKINS_JARS_MODULE_PATH}/lib/jars"/>
 
-  <condition property="commonjar" value="kbase/common/kbase-common-0.0.7.jar">
+  <condition property="commonjar" value="kbase/common/kbase-common-0.0.9.jar">
     <or>
       <equals arg1="${env.JENKINS_JAVA_COMMON_JARFILE}" arg2=""/>
       <not>
@@ -74,6 +74,8 @@
     <include name="apache_commons/commons-io-2.4.jar"/>
     <include name="snakeyaml/snakeyaml-1.11.jar"/>
     <include name="google/guava-14.0.1.jar"/>
+    <include name="mongo/mongo-java-driver-2.11.2.jar"/>
+    <include name="jongo/jongo-0.5-early-20130912-1506.jar"/>
   </fileset>
 	
   <union id="serverside">
