--- a/build.xml
+++ b/build.xml
@@ -76,6 +76,7 @@
     <include name="google/guava-14.0.1.jar"/>
     <include name="mongo/mongo-java-driver-2.11.2.jar"/>
     <include name="jongo/jongo-0.5-early-20130912-1506.jar"/>
+    <include name="bson4jackson/bson4jackson-2.2.0-2.2.0.jar"/>
   </fileset>
 	
   <union id="serverside">
