--- a/build.xml
+++ b/build.xml
@@ -77,6 +77,10 @@
     <include name="mongo/mongo-java-driver-2.11.2.jar"/>
     <include name="jongo/jongo-0.5-early-20130912-1506.jar"/>
     <include name="bson4jackson/bson4jackson-2.2.0-2.2.0.jar"/>
+    <include name="kbase/shock/shock-client-0.0.8.jar"/>
+    <include name="apache_commons/http/httpclient-4.3.1.jar"/>
+    <include name="apache_commons/http/httpcore-4.3.jar"/>
+    <include name="apache_commons/http/httpmime-4.3.1.jar"/>
   </fileset>
 	
   <union id="serverside">
