First version of docker image builder

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -55,3 +55,7 @@ method-spec-mongo-dbname = method_store_repo_db
 # method-spec-mongo-user = mongouser
 # method-spec-mongo-password = *****
 method-spec-admin-users = kbaseadmin,kbaseadmin2
+# method-spec-shock-url = 
+# method-spec-shock-user = 
+# method-spec-shock-password = 
+# method-spec-docker-registry = 
