--- a/deploy.cfg
+++ b/deploy.cfg
@@ -59,3 +59,5 @@ method-spec-admin-users = kbaseadmin,kbaseadmin2
 # method-spec-shock-user = 
 # method-spec-shock-password = 
 # method-spec-docker-registry = 
+endpoint-host=https://ci.kbase.us
+endpoint-base=/services
