--- a/build.xml
+++ b/build.xml
@@ -203,6 +203,22 @@
     </jar>
   </target>
 
+  <target name="build_run_test_nms_endpoint" description="create a binary">
+    <!-- Define absolute path to main jar file-->
+    <property name="jar.absolute.path" location="${dist}/${jar.file}"/>
+    <!-- Define classpath string with : delimiter from list of lib-jar files-->
+    <pathconvert targetos="unix" property="lib.classpath" refid="compile.classpath"/>
+
+    <!-- Create main shell script-->
+    <echo file="${dist}/run_test_nms_endpoint.sh">#!/bin/sh
+export JAVA_HOME=${env.JAVA_HOME}
+export PATH=$JAVA_HOME/bin:$PATH
+$JAVA_HOME/bin/java -cp ${lib.classpath}:${jar.absolute.path} us.kbase.narrativemethodstore.NarrativeMethodStoreServer $@
+    </echo>
+    <chmod file="${dist}/run_test_nms_endpoint.sh" perm="a+x"/>
+    <echo>Successfully built: ${dist}/run_test_nms_endpoint.sh</echo>
+  </target>
+
   <target name="buildwar" description="build the WAR file. Assumes compile has been run">
     <!-- make the war file for the server-->
     <mkdir dir="${war.dir}/lib"/>
