Parameter was added into example contig.

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -61,3 +61,7 @@ method-spec-admin-users = kbaseadmin,kbaseadmin2
 # method-spec-docker-registry = 
 endpoint-host=https://ci.kbase.us
 endpoint-base=/services
+
+# Default tag used when tag is not specified in Narrative requests.
+# It should be changed into 'release' in production deployment.
+method-spec-default-tag = dev
