--- a/src/us/kbase/narrativemethodstore/db/test/spec_4.properties
+++ b/src/us/kbase/narrativemethodstore/db/test/spec_4.properties
@@ -65,7 +65,7 @@
            "optional": true,
            "allow_multiple": true,
            "mapping": {
-               "input_reads_label": "label",
+               "input_reads_label2": "label",
                "input_reads_obj": "obj",
                "input_reads_metadata": "metadata"
            }
