--- a/src/us/kbase/narrativemethodstore/db/test/display_7.properties
+++ b/src/us/kbase/narrativemethodstore/db/test/display_7.properties
@@ -62,6 +62,7 @@ parameter-groups :
             Group for Set item
         short-hint : |
             Group of parameters which is copied for each item in Set
+        with-border : true
 
 description : |
     <p>This is a method to create and edit a group of sequence read objects.</p>
