--- a/src/us/kbase/narrativemethodstore/db/test/spec_3.properties
+++ b/src/us/kbase/narrativemethodstore/db/test/spec_3.properties
@@ -61,7 +61,7 @@
    "parameter-groups": [
        {
            "id": "tuple1",
-           "parameters": ["input_reads_label", "input_reads_obj", "input_reads_metadata"],
+           "parameters": ["input_reads_label2", "input_reads_obj", "input_reads_metadata"],
            "optional": true,
            "allow_multiple": true,
            "mapping": {
