--- a/src/us/kbase/narrativemethodstore/db/test/spec_6.properties
+++ b/src/us/kbase/narrativemethodstore/db/test/spec_6.properties
@@ -63,7 +63,7 @@
            "id": "tuple1",
            "parameters": ["input_reads_label", "input_reads_obj", "input_reads_metadata"],
            "optional": true,
-           "allow_multiple": true,
+           "allow_multiple": false,
            "mapping": {
                "input_reads_label": "label",
                "input_reads_obj": "obj",
