--- a/src/us/kbase/narrativemethodstore/db/test/spec_7.properties
+++ b/src/us/kbase/narrativemethodstore/db/test/spec_7.properties
@@ -63,12 +63,7 @@
            "id": "tuple1",
            "parameters": ["input_reads_label", "input_reads_obj", "input_reads_metadata"],
            "optional": true,
-           "allow_multiple": true,
-           "mapping": {
-               "input_reads_label": "label",
-               "input_reads_obj": "obj",
-               "input_reads_metadata": "metadata"
-           }
+           "allow_multiple": false
        }
    ],
    "behavior": {
