--- a/src/us/kbase/narrativemethodstore/db/test/spec_1.properties
+++ b/src/us/kbase/narrativemethodstore/db/test/spec_1.properties
@@ -64,6 +64,7 @@
            "parameters": ["input_reads_label", "input_reads_obj", "input_reads_metadata"],
            "optional": true,
            "allow_multiple": true,
+           "advanced": true,
            "mapping": {
                "input_reads_label": "label",
                "input_reads_obj": "obj",
