Make authentication service URL configurable

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -65,3 +65,6 @@ endpoint-base=/services
 # Default tag used when tag is not specified in Narrative requests.
 # It should be changed into 'release' in production deployment.
 method-spec-default-tag = dev
+
+# The KBase authorization server url.
+auth-service-url = https://kbase.us/services/authorizatio
