Cleaning up configuration parameters.

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -58,7 +58,7 @@ method-spec-admin-users = kbaseadmin,kbaseadmin2
 # method-spec-shock-url = 
 # method-spec-shock-user = 
 # method-spec-shock-password = 
-# method-spec-docker-registry = 
+# method-spec-shock-token = 
 endpoint-host=https://ci.kbase.us
 endpoint-base=/services
 
