Bringing 'auth-service-url-allow-insecure' configuration parameter.

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -68,3 +68,4 @@ method-spec-default-tag = dev
 
 # The KBase authorization server url.
 auth-service-url = https://kbase.us/services/authorization
+#auth-service-url-allow-insecure=false
