--- a/test/test.cfg
+++ b/test/test.cfg
@@ -10,4 +10,5 @@ test.method-spec-git-repo-branch = test
 test.method-spec-git-repo-refresh-rate = 2
 test.method-spec-cache-size = 5000
 
-test.auth-service-url=https://ci.kbase.us/services/authorization
+test.auth-service-url=https://ci.kbase.us/auth2services/auth/api/legacy/KBase/Sessions/Login
+#test.auth-service-url-allow-insecure=false
