--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_install:
   - sudo apt-get -qq update
   # ant-optional is needed for ant junit
   - sudo apt-get install ant-optional
-script: make && make test
+script: make && make test && docker build .
 
 jdk:
   - oraclejdk8
