Added missing servlet startup.

--- a/war/web.xml
+++ b/war/web.xml
@@ -11,6 +11,7 @@
     <servlet>
         <servlet-name>ImageServlet</servlet-name>
         <servlet-class>us.kbase.narrativemethodstore.ImageServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>RootServlet</servlet-name>
