--- a/build.xml
+++ b/build.xml
@@ -124,6 +124,13 @@
     <include name="testinfected/jpa-matchers-1.6.jar"/>
     <include name="apache_commons/velocity-1.7.jar"/>
     <include name="apache_commons/commons-collections-3.2.1.jar"/>
+    <!-- should probably make a testlib at some point -->
+    <!-- mockito and dependencies -->
+    <include name="mockito/mockito-core-2.7.10.jar"/>
+    <include name="bytebuddy/byte-buddy-1.6.8.jar"/>
+    <include name="bytebuddy/byte-buddy-agent-1.6.8.jar"/>
+    <include name="objenesis/objenesis-2.5.1.jar"/>
+    <include name="apache_commons/commons-lang3-3.5.jar"/>
   </fileset>
 	
   <union id="serverside">
@@ -306,6 +313,7 @@
       <sysproperty key="test.auth-service-url" value="${test.auth-service-url}"/>
       <sysproperty key="test.auth-service-url-allow-insecure" value="${test.auth-service-url-allow-insecure}"/>
       <test name="us.kbase.narrativemethodstore.db.mongo.test.MongoDynamicRepoDBTest"/>
+      <test name="us.kbase.narrativemethodstore.db.mongo.test.MongoDynamicRepoDB2Test"/>
       <test name="us.kbase.narrativemethodstore.test.FullServerTest"/>
     </junit>
     <fail message="Test failure detected, check test results." if="test.failed" />
