--- a/src/us/kbase/narrativemethodstore/db/test/spec_11.properties
+++ b/src/us/kbase/narrativemethodstore/db/test/spec_11.properties
@@ -20,7 +20,6 @@
             "dynamic_dropdown_options": {
                 "data_source": "custom",
                 "service_function": "taxonomy_re_api.search_taxa",
-                "service_version": "dev",
                 "service_params": [
                     {
                         "search_text": "prefix:{{dynamic_dropdown_input}}",
@@ -28,12 +27,8 @@
                     }
                 ],
                 "selection_id": "scientific_name",
-                "result_array_index": 3,
-                "path_to_subdata": ["result", "0", "results"],
-                "query_on_empty_input": false,
                 "somefield": 6,
-                "description_template": "<div>{{scientific_name}}</div>",
-                "multiselection": true
+                "description_template": "<div>{{scientific_name}}</div>"
             }
          },
         {
