--- a/src/us/kbase/narrativemethodstore/db/test/spec_10.properties
+++ b/src/us/kbase/narrativemethodstore/db/test/spec_10.properties
@@ -29,7 +29,7 @@
                 ],
                 "selection_id": "scientific_name",
                 "result_array_index": 3,
-                "path_to_subdata": ["result", "0", "results"],
+                "path_to_selection_items": ["result", "0", "results"],
                 "query_on_empty_input": false,
                 "somefield": 6,
                 "description_template": "<div>{{scientific_name}}</div>",
