Add multiselection parameter to dropdown options

--- a/src/us/kbase/narrativemethodstore/db/test/spec_8.properties
+++ b/src/us/kbase/narrativemethodstore/db/test/spec_8.properties
@@ -10,12 +10,12 @@
         "input": null,
         "output": null
     },
-    "parameters": [ 
+    "parameters": [
         {
             "id": "title",
             "default_values": [""],
             "optional": false,
-            "advanced": false, 
+            "advanced": false,
             "allow_multiple": false,
             "field_type": "text",
             "text_options": {
@@ -26,18 +26,18 @@
             "id": "description",
             "default_values": [""],
             "optional": false,
-            "advanced": false, 
+            "advanced": false,
             "allow_multiple": false,
             "field_type": "textarea",
             "text_options": {
                 "n_rows": 10
             }
         },
-        {   
+        {
             "id": "effort",
             "default_values": [""],
             "optional": true,
-            "advanced": false, 
+            "advanced": false,
             "allow_multiple": false,
             "field_type": "text",
             "validate_as": "int",
@@ -50,7 +50,7 @@
             "id": "severity",
             "default_values": [""],
             "optional": true,
-            "advanced": false, 
+            "advanced": false,
             "allow_multiple": false,
             "field_type": "dropdown",
             "dropdown_options": {
@@ -75,7 +75,7 @@
             "id": "time_started",
             "default_values": [""],
             "optional": false,
-            "advanced": false, 
+            "advanced": false,
             "allow_multiple": false,
             "field_type": "text",
             "text_options": {
@@ -85,22 +85,23 @@
             "id": "time_spent",
             "default_values": [""],
             "optional": false,
-            "advanced": false, 
+            "advanced": false,
             "allow_multiple": false,
             "field_type": "text",
             "validate_as": "float",
             "text_options": {
-                
+
             }
         },
         {
             "id": "task_type",
             "default_values": [""],
             "optional": false,
-            "advanced": false, 
+            "advanced": false,
             "allow_multiple": false,
             "field_type": "dropdown",
             "dropdown_options": {
+                "multiselection": true,
                 "options": [
                     {
                         "display": "Design",
@@ -129,7 +130,7 @@
             "id": "comments",
             "default_values": [""],
             "optional": true,
-            "advanced": false, 
+            "advanced": false,
             "allow_multiple": false,
             "field_type": "textarea",
             "text_options": {
