Add GHA tests, update GHA, simplify tests, remove cruft
Should no longer need submodules, will remove later
* Jars are now expected to be a sister folder (which will be removed
with the Gradle conversion
* module_builder seems to only be used in
`test/data/test_repo_1/service/init.sh` which is not called from
anywhere, and deleting it doesn't cause the tests to fail

--- a/build.xml
+++ b/build.xml
@@ -292,25 +292,11 @@
   </target>
 
   <target name="test" depends="compile" description="run tests">
-    <fail unless="test.temp-dir" message="test.temp-dir not set"/>
-    <fail unless="test.remove-temp-dir" message="test.remove-temp-dir not set"/>
-    <fail unless="test.method-spec-git-repo" message="test.method-spec-git-repo not set"/>
-    <fail unless="test.method-spec-git-repo-branch" message="test.method-spec-git-branch not set"/>
-    <fail unless="test.method-spec-git-repo-refresh-rate" message="test.method-spec-git-repo-refresh-rate not set"/>
-    <fail unless="test.method-spec-cache-size" message="test.method-spec-cache-size not set"/>
-    <fail unless="test.auth-service-url" message="test.auth-service-url not set"/>
     <echo message="starting ${package} tests"/>
     <junit fork="yes" maxmemory="3G" failureproperty="test.failed">
       <classpath refid="test.classpath"/>
       <formatter type="plain" usefile="false" />
-      <sysproperty key="test.temp-dir" value="${test.temp-dir}"/>
-      <sysproperty key="test.remove-temp-dir" value="${test.remove-temp-dir}"/>
-      <sysproperty key="test.method-spec-git-repo" value="${test.method-spec-git-repo}"/>
-      <sysproperty key="test.method-spec-git-repo-branch" value="${test.method-spec-git-repo-branch}"/>
-      <sysproperty key="test.method-spec-git-repo-refresh-rate" value="${test.method-spec-git-repo-refresh-rate}"/>
-      <sysproperty key="test.method-spec-cache-size" value="${test.method-spec-cache-size}"/>
-      <sysproperty key="test.auth-service-url" value="${test.auth-service-url}"/>
-      <sysproperty key="test.auth-service-url-allow-insecure" value="${test.auth-service-url-allow-insecure}"/>
+      <sysproperty key="test.cfg" value="test.cfg"/>
       <test name="us.kbase.narrativemethodstore.db.mongo.test.MongoDynamicRepoDBTest"/>
       <test name="us.kbase.narrativemethodstore.db.mongo.test.MongoDynamicRepoDB2Test"/>
       <test name="us.kbase.narrativemethodstore.test.FullServerTest"/>
