Fix tests attempt 1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,17 +51,17 @@ jobs:
           # set up mongo
           wget -q http://fastdl.mongodb.org/linux/${{matrix.mongo}}.tgz
           tar xfz ${{matrix.mongo}}.tgz
-          export MONGODPATH=`pwd`/${{matrix.mongo}}/bin/
+          export MONGOD=`pwd`/${{matrix.mongo}}/bin/mongod
 
           # set up test config
           cd $HOMEDIR
           cp -n test.cfg.example test.cfg
+          echo "\ntest.mongo-exe-path=$MONGOD\n" >> test.cfg
+          cat test.cfg
 
       - name: Run tests
         shell: bash
         run: |
-          export PATH=$PATH:$MONGODPATH
-          echo $PATH
           ant ${{matrix.ant_test}}
 
       - name: Upload coverage to Codecov
