--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
           - java: '8'
             mongo: 'mongodb-linux-x86_64-3.6.13'
             wired_tiger: 'false'
-            ant_test: 'test'
+            gradle_test: 'test'
     steps:
       - uses: actions/checkout@v3
 
@@ -44,10 +44,6 @@ jobs:
           # move to parent dir of homedir to install binaries etc
           cd ..
 
-          # set up jars
-          git clone https://github.com/kbase/jars
-          export JARSDIR=$(pwd)/jars/lib/jars/
-
           # set up mongo
           wget -q http://fastdl.mongodb.org/linux/${{matrix.mongo}}.tgz
           tar xfz ${{matrix.mongo}}.tgz
@@ -62,11 +58,10 @@ jobs:
       - name: Run tests
         shell: bash
         run: |
-          ant ${{matrix.ant_test}}
+          ./gradlew ${{matrix.gradle_test}}
 
-# TODO reinstate coverage upload w/ Gradle, ant is not configured for it
-#      - name: Upload coverage to Codecov
-#        uses: codecov/codecov-action@v3
-#        with:
-#          token: ${{ secrets.CODECOV_TOKEN }}
-#          fail_ci_if_error: true
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
