--- a/build.gradle
+++ b/build.gradle
@@ -195,7 +195,6 @@ dependencies {
 
 	// ### General application dependencies ###
 
-
 	implementation fromURL(
 		'https://github.com/kbase/jars/raw/master/lib/jars/kbase/auth/kbase-auth-0.4.4.jar',
 		'kbase-auth-0.4.4'
@@ -204,9 +203,10 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.2.3'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.2.3'
 	implementation 'org.mongodb:mongo-java-driver:3.10.1'
-	implementation 'com.github.docker-java:docker-java:1.3.0'
 	implementation 'org.yaml:snakeyaml:1.11'
 	implementation 'org.apache.velocity:velocity:1.7'
+	implementation 'commons-io:commons-io:2.4'
+	implementation 'com.google.guava:guava:14.0.1'
 
 	// ###
 	// Server dependencies, specifically for java_common JsonServerServlet and
