--- a/build.gradle
+++ b/build.gradle
@@ -180,7 +180,10 @@ dependencies {
 	implementation 'org.ini4j:ini4j:0.5.2'
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.2.3'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.2.3'
-	implementation 'org.mongodb:mongo-java-driver:3.10.1'
+	implementation 'org.mongodb:mongodb-driver-core:4.11.1'
+	implementation 'org.mongodb:mongodb-driver-sync:4.11.1'
+	implementation 'org.mongodb:bson-record-codec:4.11.1'
+	implementation 'org.mongodb:bson:4.11.1'
 	implementation 'org.yaml:snakeyaml:1.11'
 	implementation 'org.apache.velocity:velocity:1.7'
 	implementation 'commons-io:commons-io:2.4'
