--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,6 @@ jobs:
           - java: '8'
             mongo: 'mongodb-linux-x86_64-3.6.13'
             wired_tiger: 'false'
-            gradle_test: 'test'
     steps:
       - uses: actions/checkout@v3
 
@@ -57,8 +56,7 @@ jobs:
 
       - name: Run tests
         shell: bash
-        run: |
-          ./gradlew ${{matrix.gradle_test}}
+        run: ./gradlew test
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
