--- a/build.gradle
+++ b/build.gradle
@@ -196,6 +196,9 @@ dependencies {
 	testImplementation 'junit:junit:4.12'
 	testImplementation 'org.mockito:mockito-core:3.0.0'
 	testImplementation 'org.apache.commons:commons-lang3:3.5'
+	testImplementation('com.github.kbase:java_test_utilities:0.1.0') {
+		exclude group: 'com.fasterxml.jackson.core'  // upgrading breaks stuff
+	}
 }
 
 task showTestClassPath {
